# mmbtc_firmware

./: .gitignore  Cargo.toml  README.md  itm.txt
hw_discovery/: Cargo.toml  compile_in_docker_then_run.sh  itm.txt  openocd.gdb  run_openocd.sh
hw_discovery/.cargo/: config.toml
hw_discovery/src/: main.rs
hw_discovery/state_mgmt/: Cargo.toml
hw_discovery/state_mgmt/src/: display_type.rs  lib.rs  menu_schema.json  mm_state.rs  mm_state_action.rs
hw_discovery/state_mgmt/src/menu/: choose_network_menu_helpers.rs  confirm_mainnet_chosen_menu_helpers.rs  menu_screen_state.rs  mod.rs  screen_types.rs  test_signing_menu.rs
hw_discovery/state_mgmt/src/screens/: load_screen.rs  menu_screen.rs  mod.rs
hw_discovery/state_mgmt/src/screens/menus/: choose_network_menu.rs  confirm_mainnet_chosen_menu.rs  list_seeds.rs  list_wallets.rs  main_menu.rs  mod.rs  test_signing_menu.rs  where_to_load_transaction.rs
simulator/: Cargo.toml
simulator/src/: main.rs
src/: main.rs
state_mgmt/: Cargo.toml
state_mgmt/src/: display_type.rs  lib.rs  main.rs  mm_state.rs  networks.rs  prompt_screen_state.rs
state_mgmt/src/menu/: choose_network_menu.rs  choose_network_menu_helpers.rs  confirm_mainnet_chosen_menu_helpers.rs  menu_screen_state.rs  mod.rs  prompt_screen_state.rs  screen_types.rs
