[package]
name = "groundup"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = { version = "0.6.15" }
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
# panic-halt = "0.2.0"
panic-itm = "0.4.2"
nb = "1"
# Replace stm32f303xc with your target chip, see next section for more info
# stm32f3xx-hal = { version = "0.7.0", features = ["ld", "rt", "stm32f303xc"] }
f3 = "0.6.1"
embedded-hal = "0.2.4"
embedded-sdmmc = "0.3.0"
heapless = "0.7.5"
ili9341 = "0.5.0"
display-interface = "0.4.1"


[dependencies.alloc-cortex-m]
version = "0.4.1"

[dependencies.embedded-graphics]
version = "0.6.2"
default-features = false

[dependencies.embedded-graphics-core]
version =  "0.3.2"
default-features = false