[package]
name = "simulator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
embedded-graphics = "0.6.2"
embedded-graphics-simulator = "0.2.1"
tinytga = { version = "0.3.2", features = [ "graphics" ] }
tinybmp = { version = "0.2.2", features = [ "graphics" ] }
sdl2 = "0.32.2"
state_mgmt = { path = "../state_mgmt" }