[package]
name = "state_mgmt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.embedded-graphics]
version = "0.6.2"
default-features = false

[dependencies.heapless]
version = "0.7.5"

[dependencies.embedded-graphics-simulator]
version = "0.2.1"
default-features = false
optional = true

[dependencies.bitcoin]
version = "0.27.0"
default-features = false
features = ["no-std", "secp-lowmemory", "base64"]

[features]
default = []
simulator = ["embedded-graphics-simulator"]